[package]
name = "bromberg_sl2"
description = "Cayley hashing as in 'Navigating in the Cayley Graph of SL₂(𝔽ₚ)'"
version = "0.1.0"
authors = ["Ben Weinstein-Raun <root@benwr.net>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/benwr/bromberg_sl2"
categories = ["cryptography", "algorithms"]
keywords = ["hashing", "sl2", "homomorphic", "monoidal", "tillich-zemor"]

[profile.release]
lto = true

[dependencies]

[dev-dependencies]
quickcheck = "0.9"
num-bigint = "0.3"
