[package]
name = "bromberg_sl2"
description = "Cayley hashing as in 'Navigating in the Cayley Graph of SL₂(𝔽ₚ)'"
version = "0.4.1"
authors = ["Ben Weinstein-Raun <root@benwr.net>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/benwr/bromberg_sl2"
categories = ["cryptography", "algorithms"]
keywords = ["hashing", "sl2", "homomorphic", "monoidal", "tillich-zemor"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.bench]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
seq-macro = "0.2"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.3"
num-bigint = "0.3"
quickcheck = "0.9"
sha3 = "0.9"

[[bench]]
name = "compare_with_sha"
harness = false
